Set definite file size instead of list of file sizes.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -112,9 +112,9 @@ set(PROCS 1 2 4 8 16 32 40)
 set(STORAGE_TYPES orangefs mongodb redis)
 set(ADDRS /mnt/nvme/llogan/write/generic 0 0)
 set(PORTS 0 0 0)
+set(FILE_SIZE 128g)
 set(BLOCK_SIZES 1b 64b 512b 1k 4k 64k 256k 512k 1m 2m 4m 8m 16m)
-set(FILE_SIZES 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g)
-set(TOTAL_IOS 256k 512k 1m 2m 128m 2g 8g 16g 32g 128g 128g 128g 128g)
+set(TOTAL_IOS 256k 512k 1m 2m 128m 2g 8g 16g 32g 64g 64g 64g 64g)
 set(ACCESS_PATTERNS seq uniform)
 set(WFRACS 1 .5 0)
 set(RFRACS 0 .5 1)
@@ -127,7 +127,7 @@ foreach(NPROC ${PROCS})
         list(GET STORAGE_TYPES ${ST_IDX} STORAGE_TYPE)
         list(GET ADDRS ${ST_IDX} ADDR)
         list(GET PORTS ${ST_IDX} PORT)
-        prealloc(${NPROC} ${STORAGE_TYPE} ${ADDR} ${PORT} 128g)
+        prealloc(${NPROC} ${STORAGE_TYPE} ${ADDR} ${PORT} ${FILE_SIZE})
     endforeach()
 endforeach()
 
@@ -142,7 +142,6 @@ foreach(NPROC ${PROCS})
         math(EXPR BLOCK_SIZES_LAST "${BLOCK_SIZES_LEN} - 1")
         foreach(BS_IDX RANGE ${BLOCK_SIZES_LAST})
             list(GET BLOCK_SIZES ${BS_IDX} BLOCK_SIZE)
-            list(GET FILE_SIZES ${BS_IDX} FILE_SIZE)
             list(GET TOTAL_IOS ${BS_IDX} TOTAL_IO)
             foreach(ACCESS_PATTERN ${ACCESS_PATTERNS})
                 list(LENGTH WFRACS WFRACS_LEN)
@@ -168,8 +167,8 @@ function(md_test nprocs storage_type caddr cport md_fcnt md_dir config)
             -out /home/llogan/md_test_${config}.csv)
 endfunction()
 
-set(MD_FCNT 512k)
-set(MD_DIRS 1 2 4 8 16 32 64)
+set(MD_FCNT 256k)
+set(MD_DIRS 1 8 32 64 128)
 
 foreach(NPROC ${PROCS})
     list(LENGTH STORAGE_TYPES STORAGE_TYPES_LEN)
