--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -65,19 +65,19 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        source_dir=${GITHUB_WORKSPACE}
-        log_dir=${HOME}/work/log
-        mkdir -p $log_dir
-        mkdir -p /home/runner/work/symbios_server
-        echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf"
-        echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf" > ${log_dir}/server.log
-        ${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf
-        SERVER_PID=$!
-        echo $SERVER_PID > ${log_dir}/server.lock
-        echo "sleeping for 5 seconds"
-        sleep 5
-        echo "$source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf"
-        $source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf
-        echo "Killing server"
-        kill `cat ${log_dir}/server.lock`
-        rm ${log_dir}/server.lock
+        #source_dir=${GITHUB_WORKSPACE}
+        #log_dir=${HOME}/work/log
+        #mkdir -p $log_dir
+        #mkdir -p /home/runner/work/symbios_server
+        #echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf"
+        #echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf" > ${log_dir}/server.log
+        #{source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf
+        #ERVER_PID=$!
+        #echo $SERVER_PID > ${log_dir}/server.lock
+        #echo "sleeping for 5 seconds"
+        #sleep 5
+        #echo "$source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf"
+        #$source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf
+        #echo "Killing server"
+        #kill `cat ${log_dir}/server.lock`
+        #rm ${log_dir}/server.lock
