Significantly lower the block sizes

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -100,7 +100,7 @@ set(ADDRS /mnt/nvme/llogan/write/generic 0 0)
 set(PORTS 0 0 0)
 set(FILE_SIZE 128g)
 set(BLOCK_SIZES 1b 64b 512b 1k 4k 64k 256k 512k 1m 2m 4m 8m 16m)
-set(TOTAL_IOS 256k 512k 1m 2m 128m 2g 8g 16g 32g 64g 64g 64g 64g)
+set(TOTAL_IOS 256b 16k 128k 256k 1m 16m 64m 128m 256m 512m 1g 2g 4g)
 set(ACCESS_PATTERNS seq uniform)
 set(WFRACS 1 .5 0)
 set(RFRACS 0 .5 1)
