Add virtual destructor to IOClient, File, and Args

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -47,7 +47,7 @@ add_test(NAME bm_rw_test_rand COMMAND
 add_test(NAME bm_md_test COMMAND
         ${CMAKE_CURRENT_BINARY_DIR}/benchmark
         -s orangefs -caddr /home/lukemartinlogan/ -path /test
-        -w md-fs -md_depth 128 -md_fcnt 400
+        -w md-fs -md_depth 1 -md_fcnt 256k
         -out ~/md_test.csv)
 
 
