Return to default. Plus configManager Plus early tests work

--- a/conf/symbios.conf
+++ b/conf/symbios.conf
@@ -6,14 +6,14 @@
   "SERVER_DIR": "/dev/shm/hari/symbios_server",
   "POSIX_MOUNT_POINT":"/tmp/tmp.BUKlhPiLxF/conf/symbios.conf",
   "RANDOM_SEED":100,
-  "STORAGE_SOLUTIONS" : [
-      "FileStorageSolution" : {
+  "STORAGE_SOLUTIONS" : {
+      "POSIX" : {
           "MOUNT" : "/home/hdevarajan/pfs/meta"
       },
-      "RedisStorageSolution" : {
+      "REDIS" : {
           "IP" : "127.0.0.1",
           "PORT" : "6379"
       }
-  ],
+  },
   "DATA_DISTRIBUTION_POLICY":ROUND_ROBIN_POLICY
 }
