Updated client.cpp Finsihed test.cpp

--- a/conf/base_symbios.conf
+++ b/conf/base_symbios.conf
@@ -7,10 +7,10 @@
   "POSIX_MOUNT_POINT":"/tmp/tmp.BUKlhPiLxF/conf/symbios.conf",
   "RANDOM_SEED":100,
   "STORAGE_SOLUTIONS" : {
-      "POSIX" : {
+      "FILE_IO" : {
           "MOUNT" : "/home/hdevarajan/pfs/meta"
       },
-      "REDIS" : {
+      "REDIS_IO" : {
           "IP" : "127.0.0.1",
           "PORT" : "6379"
       }
