--- a/conf/test.conf
+++ b/conf/test.conf
@@ -7,14 +7,14 @@
   "POSIX_MOUNT_POINT":"${HOME}/symbios-test/symbios_client",
   "RANDOM_SEED":100,
   "STORAGE_SOLUTIONS" : {
-      "POSIX" : {
+      "FILE_IO" : {
           "MOUNT" : "${HOME}/symbios-test/posix_mount"
       },
-      "REDIS" : {
+      "REDIS_IO" : {
           "IP" : "127.0.0.1",
           "PORT" : "6379"
       },
-      "MONGO" : {
+      "MONGO_IO" : {
             "IP" : "127.0.0.1",
             "DATABASE" : "symbios_test",
             "COLLECTION" : "colelction_test"
