--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,14 +1,14 @@
 {
-  "SERVER_LISTS": "${HOME}/symbios/conf/server_lists/symbios_server",
-  "CLIENT_LISTS": "${HOME}/symbios/conf/server_lists/symbios_client" ,
+  "SERVER_LISTS": "/home/user/symbios/conf/server_lists/symbios_server",
+  "CLIENT_LISTS": "/home/user/symbios/conf/server_lists/symbios_client" ,
   "SYMBIOS_PORT": 9000,
   "SERVER_RPC_THREADS": 10,
-  "SERVER_DIR": "${HOME}/symbios-test/symbios_server",
-  "POSIX_MOUNT_POINT":"${HOME}/symbios-test/symbios_client",
+  "SERVER_DIR": "/home/user/symbios-test/symbios_server",
+  "POSIX_MOUNT_POINT":"/home/user/symbios-test/symbios_client",
   "RANDOM_SEED":100,
   "STORAGE_SOLUTIONS" : {
       "FILE_IO" : {
-          "MOUNT" : "${HOME}/symbios-test/posix_mount"
+          "MOUNT" : "/home/user/symbios-test/posix_mount"
       },
       "REDIS_IO" : {
           "IP" : "127.0.0.1",
