--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,24 +1,26 @@
 {
-  "SERVER_LISTS": "/home/user/symbios/conf/server_lists/symbios_server",
-  "CLIENT_LISTS": "/home/user/symbios/conf/server_lists/symbios_client" ,
+  "SERVER_LISTS": "${SYMBIOS_SOURCE_DIR}/conf/server_lists/single_node_symbios_server",
+  "CLIENT_LISTS": "${SYMBIOS_SOURCE_DIR}/conf/server_lists/single_node_symbios_client" ,
   "SYMBIOS_PORT": 9000,
   "SERVER_RPC_THREADS": 10,
-  "SERVER_DIR": "/home/user/symbios-test/symbios_server",
-  "POSIX_MOUNT_POINT":"/home/user/symbios-test/symbios_client",
+  "SERVER_DIR": "/dev/shm/symbios_server",
   "RANDOM_SEED":100,
-  "STORAGE_SOLUTIONS" : {
-      "FILE_IO" : {
-          "MOUNT" : "/home/user/symbios-test/posix_mount"
+  "STORAGE_SOLUTIONS" : [
+      {
+          "TYPE" :"FILE_IO",
+          "MOUNT" : "${SYMBIOS_PFS_DIR}"
       },
-      "REDIS_IO" : {
+      {
+          "TYPE" :"REDIS_IO",
           "IP" : "127.0.0.1",
-          "PORT" : "6379"
+          "PORT" : 6379
       },
-      "MONGO_IO" : {
+      {
+          "TYPE" :"MONGO_IO",
             "IP" : "127.0.0.1",
             "DATABASE" : "symbios_test",
             "COLLECTION" : "colelction_test"
       }
-  },
+  ],
   "DATA_DISTRIBUTION_POLICY":"RANDOM_POLICY"
 }
