fixed mongo and redis for shadow link cases.

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -17,7 +17,7 @@
       },
       {
           "TYPE" :"MONGO_IO",
-            "IP" : "127.0.0.1",
+            "IP" : "mongodb://localhost:27017",
             "DATABASE" : "symbios_test",
             "COLLECTION" : "colelction_test"
       }
