--- a/conf/test.conf
+++ b/conf/test.conf
@@ -19,7 +19,7 @@
           "TYPE" :"MONGO_IO",
             "IP" : "mongodb://localhost:27017",
             "DATABASE" : "symbios_test",
-            "COLLECTION" : "colelction_test"
+            "COLLECTION" : "collection_test"
       }
   ],
   "DATA_DISTRIBUTION_POLICY":"RANDOM_POLICY"
