added multiple port and ip

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -12,8 +12,8 @@
       },
       {
           "TYPE" :"REDIS_IO",
-          "IP" : "127.0.0.1",
-          "PORT" : 6379
+          "IP" : "127.0.0.1,127.0.0.1,127.0.0.1",
+          "PORT" : "6379,6380,6381"
       },
       {
           "TYPE" :"MONGO_IO",
