Verified that CSV outputs correct format

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -75,6 +75,7 @@ set(NPROCS_LIST 1 2 4 8 16 32)
 set(MODEL_FILE ${CMAKE_BINARY_DIR}/test_data.csv)
 add_executable(unit_storage_cost_predictor storage_cost_predictor/test.cpp ${SYMBIOS_SERVER_SRC})
 target_link_libraries(unit_storage_cost_predictor ${LIBS})
+#set_target_properties(unit_storage_cost_predictor PROPERTIES COMPILE_FLAGS -O3)
 foreach(NREQS ${NREQS_LIST})
     foreach(NPROCS ${NPROCS_LIST})
         add_test(NAME sc_predictor_${NREQS}_${NPROCS} COMMAND
