--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,7 +38,7 @@ jobs:
       #uses: supercharge/mongodb-github-action@1.3.0
       #with:
         #mongodb-version: ${{ matrix.mongodb-version }}
-
+     
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
@@ -59,6 +59,17 @@ jobs:
         cd ${GITHUB_WORKSPACE}/build
         cmake ${GITHUB_WORKSPACE} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
         cmake --build . --config $
+    - name: Cache
+      uses: actions/cache@v2.1.1
+      with:
+        # A list of files, directories, and wildcard patterns to cache and restore
+        path: ${GITHUB_WORKSPACE}
+        # An explicit key for restoring and saving the cache
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/symbios/*') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
     
     - name: Test
       shell: bash
