fixed cmake to compile faster and remove memory explosion issue.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -3,7 +3,8 @@ set(INSTALL_DIR $ENV{INSTALL_DIR})
 include_directories(${INSTALL_DIR}/include/)
 set(CMAKE_CXX_STANDARD 17)
 
-set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lopenblas  -ldlib -lgfortran -lm -lquadmath -lpthread -lm -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread -ldl)
+#set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lopenblas  -ldlib -lgfortran -lm -lquadmath -lpthread -lm -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread -ldl)
+set(LIBS -lmpi)
 include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
 set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
@@ -35,8 +36,10 @@ set(test_files  data_placement
                 posix)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
-    add_executable(${exec} ${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} ${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
+    target_link_libraries(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
@@ -56,8 +59,10 @@ set(test_files  file_io
                 mongo_io)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
-    add_executable(${exec} io_clients/${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} io_clients/${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
+    target_link_libraries(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
@@ -74,7 +79,8 @@ endforeach ()
 set(NREQS_LIST 100 1000 10000 100000 1000000)
 set(NPROCS_LIST 1 2 4 8 16 32)
 set(MODEL_FILE ${CMAKE_BINARY_DIR}/test_data.csv)
-add_executable(unit_storage_cost_predictor storage_cost_predictor/test.cpp ${SYMBIOS_SERVER_SRC})
+add_executable(unit_storage_cost_predictor storage_cost_predictor/test.cpp)
+target_link_libraries(unit_storage_cost_predictor symbios_server_lib)
 target_link_libraries(unit_storage_cost_predictor ${LIBS})
 #set_target_properties(unit_storage_cost_predictor PROPERTIES COMPILE_FLAGS -O3)
 foreach(NREQS ${NREQS_LIST})
