--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${INSTALL_DIR}/include/)
 set(CMAKE_CXX_STANDARD 17)
 
 
-set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lmpi   -lpthread -ldl  -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread)
+#set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lmpi   -lpthread -ldl  -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread)
 include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
 set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
@@ -12,8 +12,10 @@ set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
 set(test_files shadow_link)
 foreach (test_file ${test_files})
     set(exec ${test_file})
-    add_executable(${exec} ${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} ${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
+    target_link_libraries(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
@@ -24,8 +26,10 @@ endforeach ()
 set(test_files cm1_kmeans wrf)
 foreach (test_file ${test_files})
     set(exec ${test_file})
-    add_executable(${exec} apps/${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec} apps/${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
+    target_link_libraries(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
