--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -83,3 +83,22 @@ foreach(NREQS ${NREQS_LIST})
                 mpirun -n ${NPROCS} ${CMAKE_BINARY_DIR}/test/unit/unit_storage_cost_predictor -model ${MODEL_FILE} -nreqs ${NREQS} -out ${CMAKE_BINARY_DIR}/scc_thrpt.csv)
     endforeach()
 endforeach()
+
+
+set(test_files iris_emu)
+foreach (test_file ${test_files})
+    set(exec unit_${test_file})
+    add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp ${SYMBIOS_SERVER_SRC})
+    add_dependencies(${exec} symbios)
+    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
+    target_link_libraries(${exec} ${LIBS})
+    target_link_libraries(${exec} symbios)
+    #set_target_properties(${exec} PROPERTIES FOLDER test/unit)
+    set(test_parameters )
+    set(test_name ${test_file}_test)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "LD_PRELOAD=${CMAKE_BINARY_DIR}/ares/datasets/libdatasets.so")
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "HDF5_PLUGIN_PATH=$ENV{HDF5_PLUGIN_PATH}")
+    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT "RUN_DIR=$ENV{RUN_DIR}")
+endforeach ()
