--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -3,7 +3,7 @@ set(INSTALL_DIR $ENV{INSTALL_DIR})
 include_directories(${INSTALL_DIR}/include/)
 set(CMAKE_CXX_STANDARD 17)
 
-#set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lopenblas  -ldlib -lgfortran -lm -lquadmath -lpthread -lm -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread -ldl)
+set(IRIS_LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lopenblas  -ldlib -lgfortran -lm -lquadmath -lpthread -lm -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread -ldl)
 set(LIBS -lmpi)
 include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
@@ -97,7 +97,7 @@ foreach (test_file ${test_files})
     add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp ${SYMBIOS_SERVER_SRC})
     add_dependencies(${exec} symbios)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
-    target_link_libraries(${exec} ${LIBS})
+    target_link_libraries(${exec} ${IRIS_LIBS})
     target_link_libraries(${exec} symbios)
     #set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
