--- a/conf/test.conf
+++ b/conf/test.conf
@@ -9,6 +9,17 @@
       {
           "TYPE" :"FILE_IO",
           "MOUNT" : "${SYMBIOS_PFS_DIR}"
+      },
+      {
+          "TYPE" :"REDIS_IO",
+          "IP" : "127.0.0.1,127.0.0.1,127.0.0.1",
+          "PORT" : "6379,6380,6381"
+      },
+      {
+          "TYPE" :"MONGO_IO",
+            "IP" : "mongodb://localhost:27017",
+            "DATABASE" : "symbios_test",
+            "COLLECTION" : "collection_test"
       }
   ],
   "DATA_DISTRIBUTION_POLICY":"RANDOM_POLICY"
