--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -26,6 +26,8 @@ endforeach ()
 set(test_files cm1_kmeans wrf)
 foreach (test_file ${test_files})
     set(exec ${test_file})
+    file(COPY apps/${test_file}/traces_${exec}
+        DESTINATION ${CMAKE_BINARY_DIR}/test/integration)
     add_executable(${exec} apps/${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
     add_dependencies(${exec} symbios_server_lib)
@@ -35,6 +37,7 @@ foreach (test_file ${test_files})
     target_link_libraries(${exec} symbios)
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
     set(test_name ${test_file}_test)
+    set(test_parameters -r 1 -m POSIX -t ${CMAKE_BINARY_DIR}/test/integration/traces_${exec} -o ${CMAKE_BINARY_DIR}/Testing/Temporary)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
     set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
