--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -94,8 +94,10 @@ endforeach()
 set(test_files iris_emu)
 foreach (test_file ${test_files})
     set(exec unit_${test_file})
-    add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp ${SYMBIOS_SERVER_SRC})
+    add_executable(${exec}  ${test_file}/test.cpp ${test_file}/iris.cpp)
     add_dependencies(${exec} symbios)
+    add_dependencies(${exec} symbios_server_lib)
+    target_link_libraries(${exec} symbios_server_lib)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${IRIS_LIBS})
     target_link_libraries(${exec} symbios)
